--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -41,6 +41,12 @@ spring:
     cache-names: users
     caffeine.spec: maximumSize=5000,expireAfterAccess=60s
 
+  security:
+    user:
+      name: user
+      password: password
+      roles: USER
+
 logging:
   level:
     root: WARN
