Fix update Users

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -41,11 +41,11 @@ spring:
     cache-names: users
     caffeine.spec: maximumSize=5000,expireAfterAccess=60s
 
-#  security:
-#    user:
-#      name: user
-#      password: password
-#      roles: USER
+  security:
+    user:
+      name: user
+      password: password
+      roles: USER
 
 logging:
   level:
