--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,8 +16,8 @@ spring:
         jdbc.batch_size: 20
   datasource:
     # ImMemory
-    url: jdbc:h2:mem:topjava
-    #    tcp: jdbc:h2:tcp://localhost:9092/mem:topjava
+    url: jdbc:h2:mem:graduation
+    #    tcp: jdbc:h2:tcp://localhost:9092/mem:graduation
     # Absolute path
     #    url: jdbc:h2:C:/projects/bootjava/db/topjava
     #    tcp: jdbc:h2:tcp://localhost:9092/C:/projects/bootjava/db/topjava
